# django-payment-manager

./: .gitignore  MANIFEST.in  README.md  check_version.py  manage.py  requirements.txt  setup.cfg
.github/: labeler.yml
.github/workflows/: tests.yml
django_payment_manager/: asgi.py  productions.py  settings.py  urls.py  wsgi.py
docs/: README.md
payment/: __init__.py  admin.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py
payment/email_sender/: email_sender.py
payment/static/css/: payment.css
payment/templates/base_templates/: base.html
payment/templates/email_sender/: notify_admin.html  payment_email.html
payment/templates/payment/: payment.html  payment_details.html  success.html
payment/tests/: test_models.py
