[metadata]
name = django-payment-manager
version = 1.0.1
description = A Django app for integrating PayPal and Credit Card payments with ease and flexibility.
url = https://github.com/adamspd/django-payment
author = Adams Pierre David
author_email = adamspd.developer@gmail.com
author_website = https://adamspierredavid.com/
readme = README.md
license = Apache License 2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2
    requests >= 2.28.2